--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
             type="com.weather.test.pojo.WeatherModule">
 
         </variable>
+
+        <variable
+            name="arun"
+            type="com.weather.test.pojo.Temp">
+
+        </variable>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -46,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:text="Today weather"
+                    android:text="@{arun.temp}"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
